fix: change navigation in menu for desktop screens and mobile phones

--- a/src/header/burgerNav/BurgerNav.module.scss
+++ b/src/header/burgerNav/BurgerNav.module.scss
@@ -21,6 +21,7 @@
       @include text($titleFontFamily, 16px, 1.2, 400);
       color: $textColor;
       cursor: pointer;
+      text-decoration: none;
 
       &:hover {
         text-decoration: none;
