--- a/src/home/Home.module.scss
+++ b/src/home/Home.module.scss
@@ -1,13 +1,17 @@
-@import 'src/common/styles/sass/variables';
+.mainBlock {
+  min-height: 100vh;
+}
 
-.container {
-  > div {
-    &:nth-child(n) {
-      background-color: $bgSecondColor;
-    }
-
-    &:nth-child(2n) {
-      background-color: $bgColor;
-    }
-  }
+.mainPhoto {
+  background-image: url('../assets/image/main_photo.jpeg');
+  height: 100vh;
+  width: 100%;
+  object-fit: scale-down;
+  display: block;
+  position: absolute;
+  margin: auto;
+  top: -9999px;
+  bottom: -9999px;
+  left: -9999px;
+  right: -9999px;
 }
