--- a/src/home/Home.module.scss
+++ b/src/home/Home.module.scss
@@ -1,17 +1,20 @@
 .mainBlock {
   min-height: 100vh;
+
+  .mainPhoto {
+    background-image: url('../assets/image/main_photo.jpeg');
+    height: 100vh;
+    width: 100%;
+    object-fit: scale-down;
+    display: block;
+    position: absolute;
+    margin: auto;
+    top: -9999px;
+    bottom: -9999px;
+    left: -9999px;
+    right: -9999px;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
 }
 
-.mainPhoto {
-  background-image: url('../assets/image/main_photo.jpeg');
-  height: 100vh;
-  width: 100%;
-  object-fit: scale-down;
-  display: block;
-  position: absolute;
-  margin: auto;
-  top: -9999px;
-  bottom: -9999px;
-  left: -9999px;
-  right: -9999px;
-}
