--- a/src/common/components/back-button/BackButton.module.scss
+++ b/src/common/components/back-button/BackButton.module.scss
@@ -2,18 +2,25 @@
 @import '../../../../../empire_builders/src/common/styles/sass/mixins';
 
 .container {
-  position: relative;
 
   .backButton {
-    position: absolute;
-    top: -90px;
-    right: 50px;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
     z-index: 100;
+    border: solid 1 px $textColor;
+    border-radius: 10px;
+  box-shadow: 15px 15 px $textColor;
 
     .image {
       width: 50px;
       height: 50px;
       color: $primaryColor;
+      
+      @media screen and (max-width: 990px)  {
+        width: 25px;
+        height: 25px;
+      }
     }
   }
 }
