--- a/src/common/components/back-button/BackButton.module.scss
+++ b/src/common/components/back-button/BackButton.module.scss
@@ -5,19 +5,24 @@
 
   .backButton {
     position: fixed;
-    bottom: 20px;
-    right: 20px;
+    bottom: 5%;
+    right: 5%;
     z-index: 100;
-    border: solid 1 px $textColor;
+    border: solid 1px $primaryColor;
     border-radius: 10px;
-  box-shadow: 15px 15 px $textColor;
+    box-shadow: 4px 4px $primaryColor;
+    background-color: $textColor;
+
+    @media screen and (max-width: 550px) {
+      box-shadow: 2px 2px $primaryColor;
+    }
 
     .image {
       width: 50px;
       height: 50px;
       color: $primaryColor;
-      
-      @media screen and (max-width: 990px)  {
+
+      @media screen and (max-width: 550px) {
         width: 25px;
         height: 25px;
       }
