--- a/src/portfolio/project/Project.module.scss
+++ b/src/portfolio/project/Project.module.scss
@@ -5,7 +5,12 @@
   @include flex(column, flex-start, center, wrap);
   background-color: $bgSecondColor;
 
-  .image {
+  :hover {
+    opacity: 0.7;
+  }
+
+  .link {
+
     @include flex(column, center, center, wrap);
     min-height: 300px;
     width: 100%;
@@ -13,6 +18,7 @@
     background-position: center;
     background-repeat: no-repeat;
     position: relative;
+    border-radius: 3px;
 
     &::before {
       position: absolute;
@@ -22,25 +28,28 @@
       bottom: 0;
       left: 0;
       right: 0;
-      opacity: 0.3;
+      opacity: 0;
+    }
+
+    :hover {
+      opacity: 1;
     }
 
     .viewBtn {
       @include flex(column, center, center, wrap);
-      width: 200px;
-      height: 40px;
+      min-height: 300px;
+      width: 100%;
       font-size: 20px;
       text-decoration: none;
-      background-color: $bgSecondColor;
       color: $primaryColor;
-      margin: 30px 0;
       position: relative;
       z-index: 1;
+      opacity: 0;
 
       &:hover {
-        transform: scale(1.1);
         color: $textColor;
         cursor: pointer;
+        opacity: 1;
       }
     }
   }
