--- a/src/header/Header.module.scss
+++ b/src/header/Header.module.scss
@@ -1,5 +1,5 @@
-@import '../../../empire_builders/src/common/styles/sass/variables';
-@import '../../../empire_builders/src/common/styles/sass/mixins';
+@import 'src/common/styles/sass/variables';
+@import 'src/common/styles/sass/mixins';
 
 .header {
   @include flex(row, space-between, center, nowrap);
