--- a/src/common/components/back-button/BackButton.module.scss
+++ b/src/common/components/back-button/BackButton.module.scss
@@ -1,5 +1,5 @@
-@import '../../../../../empire_builders/src/common/styles/sass/variables';
-@import '../../../../../empire_builders/src/common/styles/sass/mixins';
+@import 'src/common/styles/sass/variables';
+@import 'src/common/styles/sass/mixins';
 
 .container {
 
