--- a/src/common/components/slider/Slider.module.scss
+++ b/src/common/components/slider/Slider.module.scss
@@ -35,13 +35,12 @@
     @include flex(column, center, center, nowrap);
 
     .image {
-      height: 99%;
-      width: 100%;
+      height: 100%;
+      width: 95%;
       object-fit: cover;
-      margin: 0 0 1% 0;
+      margin: 1%;
+      padding: 0.5%;
     }
   }
 
 }
-
-
