fix: changes styles

--- a/src/home/Home.module.scss
+++ b/src/home/Home.module.scss
@@ -1,5 +1,6 @@
 .mainBlock {
   min-height: 100vh;
+  height: 100%;
 
   .mainPhoto {
     background-image: url('../assets/image/main_photo.jpeg');
