--- a/src/home/Home.module.scss
+++ b/src/home/Home.module.scss
@@ -5,8 +5,9 @@
   .mainPhoto {
     background-image: url('../assets/image/main_photo.jpeg');
     max-height: 100vh;
+    height: 100%;
     width: 100%;
-    object-fit: scale-down;
+    object-fit: cover;
     display: block;
     position: absolute;
     margin: auto;
