--- a/src/home/Home.module.scss
+++ b/src/home/Home.module.scss
@@ -7,6 +7,7 @@
     height: 100%;
     width: 100%;
     box-sizing: border-box;
+    overflow: hidden;
     object-fit: cover;
     display: block;
     position: absolute;
