--- a/src/common/components/map/Map.module.scss
+++ b/src/common/components/map/Map.module.scss
@@ -1,10 +1,15 @@
 .map {
   border-radius: 5%;
-  height: 400px;
-  width: 400px;
+  height: 410px;
+  width: 410px;
 
-  @media screen and (max-width: 480px) {
-    height: 300px;
-    width: 300px;
+  @media screen and (max-width: 540px) {
+    height: 330px;
+    width: 330px;
+  }
+
+  @media screen and (max-width: 300px) {
+    height: 250px;
+    width: 250px;
   }
 }
