--- a/src/contacts/Contacts.module.scss
+++ b/src/contacts/Contacts.module.scss
@@ -4,6 +4,7 @@
 .contacts {
   padding: 100px 0;
   min-height: 74vh;
+
   @media screen and (max-width: 400px) {
     padding: 60px 0;
   }
@@ -13,7 +14,7 @@
     @include flex(column, space-between, center, wrap);
     height: 70vh;
 
-    @media screen and (max-width: 995px) {
+    @media screen and (max-width: 1030px) {
       height: 100%;
     }
 
@@ -21,15 +22,18 @@
       color: $textColor;
       @include flex(row, space-between, center, wrap);
       width: 100%;
-      margin-top: 30px;
 
-      @media screen and (max-width: 995px) {
+      @media screen and (max-width: 1030px) {
         @include flex(row, center, center, wrap);
         align-content: center;
       }
 
       @media screen and (max-width: 540px) {
         font-size: 12px;
+      }
+
+      @media screen and (max-width: 400px) {
+        font-size: 11px;
       }
 
       .image {
@@ -40,7 +44,7 @@
         padding-right: 10px;
       }
 
-      @media screen and (max-width: 995px) {
+      @media screen and (max-width: 1030px) {
         @include flex(row, center, center, wrap);
         align-content: space-between;
       }
