--- a/src/common/components/back-button/BackButton.module.scss
+++ b/src/common/components/back-button/BackButton.module.scss
@@ -3,6 +3,9 @@
 
 .container {
   .backButton {
+    display: inline-flex;
+    align-items: center;
+    gap: 8px;
     position: fixed;
     bottom: 5%;
     right: 5%;
@@ -21,9 +24,6 @@
     padding: 10px 20px;
     transition: all 0.3s ease;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
-    justify-content: center;
-    align-items: center;
-    text-align: center;
 
     &:hover {
       box-shadow: 0 6px 14px rgba(0, 0, 0, 0.25);
@@ -33,6 +33,12 @@
     &:active {
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
       transform: translateY(1px);
+    }
+    .arrow {
+      display: inline-flex;
+      align-items: center;
+      position: relative;
+      top: -1.5px;
     }
   }
 }
