fix: changed place of project's title

--- a/src/portfolio/ProjectsList.module.scss
+++ b/src/portfolio/ProjectsList.module.scss
@@ -60,7 +60,9 @@
 .projectHeader {
   color: $textColor;
   font-size: 22px;
-  margin-bottom: 20px;
+  margin: 20px;
+  text-align: end;
+  padding-top: 20px;
 }
 
 .photoGrid {
