--- a/src/portfolio/Portfolio.module.scss
+++ b/src/portfolio/Portfolio.module.scss
@@ -23,11 +23,12 @@
 }
 
 .projectCard {
-  border: 1px solid #ddd;
+  border: 1px solid $textColor;
   border-radius: 12px;
   overflow: hidden;
   cursor: pointer;
   transition: transform 0.2s ease;
+  transition: filter 0.3s ease;
 
   &:hover {
     transform: translateY(-4px);
@@ -38,6 +39,10 @@
   width: 100%;
   height: 300px;
   object-fit: cover;
+
+  &:hover {
+    filter: brightness(70%);
+  }
 }
 
 .projectTitle {
